# matrix

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy.yml
docker/: backend.Dockerfile  frontend.Dockerfile
docker/nginx/: nginx.conf
docs/business/: business-plan.md  business-requirements.md  (+2 more)
src/backend/: alembic.ini  pyproject.toml  seed.py
src/backend/alembic/: env.py
src/backend/alembic/versions/: e91129256a94_initial_schema.py
src/backend/app/: celery_app.py  cli.py  main.py  telegram_bot.py
src/backend/app/api/: analytics.py  assessments.py  auth.py  calibration.py  career_paths.py  dashboard.py  departments.py  development_plans.py  export.py  imports.py  notifications.py  router.py  system.py  target_profiles.py  users.py
src/backend/app/core/: config.py  database.py  dependencies.py  pagination.py  security.py
src/backend/app/models/: __init__.py  assessment.py  audit_log.py  base.py  career_path.py  competency.py  department.py  development_plan.py  enums.py  notification.py  proposal.py  target_profile.py  team.py  user.py
src/backend/app/schemas/: assessment.py  auth.py  career_path.py  common.py  department.py  development_plan.py  notification.py  target_profile.py  team.py  user.py
src/backend/app/services/: assessment.py  audit.py  auth.py  calibration.py  career_path.py  department.py  development_plan.py  notification.py  target_profile.py  team.py  user.py
src/backend/app/tasks/: backup.py
(+72 files in other folders)
